# TrackerGoturn

./: README.md
TrackerGoturnDemo/: CMakeLists.txt  INSTALL.md  README.md
TrackerGoturnDemo/nets/: goturnDeploy.prototxt  goturnDeploy_2_fc.prototxt  goturnTrain.prototxt
TrackerGoturnDemo/scripts/: show_tracker_test.sh  show_tracker_test_alex.sh  trainDatasets.txt
TrackerGoturnDemo/src/capture/: README.md  build.sh  capture_tracker.cpp  run.sh
TrackerGoturnDemo/src/helper/: bounding_box.cpp
TrackerGoturnDemo/src/network/: regressor.cpp  regressor.h
TrackerGoturnDemo/src/test/: test_tracker_vot.cpp
TrackerGoturnDemo/src/tracker/: tracker.cpp  tracker_manager.cpp
TrackerGoturnTraining/: README.md  buildH5Dataset.h  buildH5Datasets.cpp  build_main_spueezenet.sh  goturnTrain.prototxt  main.cpp  mycvruntime.sh  testDatasets.txt  trainDatasets.txt  utils.h  utils2.cpp
